--- a/style.css
+++ b/style.css
@@ -18,10 +18,24 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
+    padding-inline: 80px;
 }
 header{
     height: 200px;
     background-color: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo{
+    height: 64px;
+    width: 64px;
+    background-color: lightblue;
+}
+.menu ul{
+    display: flex;
+    gap: 32px;
+    font-size: 32px;
 }
 main{
     flex-grow: 1;
